[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
sandbox = "sandbox.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
ursina = "^4.0.0"
psutil = "^5.8.0"
imageio = "^2.9.0"
"hurry.filesize" = "^0.9"
docopt = "^0.6.2"
packbits = "^0.6"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
